--- a/package.json
+++ b/package.json
@@ -10,20 +10,29 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/native": "^6.1.3",
+    "@react-navigation/stack": "^6.3.12",
     "@ui-kitten/components": "^5.1.2",
     "expo": "~47.0.12",
+    "expo-auth-session": "~3.8.0",
+    "expo-random": "~13.0.0",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-svg": "^13.8.0",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
+    "prettier": "2.8.4",
+    "react-native-dotenv": "^3.4.7",
     "typescript": "^4.6.3"
   },
   "private": true
