--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
+    "react-native-svg-transformer": "^1.0.0",
     "react-native-toast-message": "^2.1.5",
     "react-native-web": "~0.18.9"
   },
